--- a/index.html
+++ b/index.html
@@ -91,9 +91,86 @@
 
 	<main class="main">
 
+		<div class="bg-ghost-white">
+			<div class="container-xxl">
+				<div class="row">
+					<div
+						class="col-12 col-lg-6 col-xl-5 d-flex align-items-center my-34 my-lg-60 my-xl-120 order-2 order-lg-1">
+						<div class="swiper header-slider">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<img class=" mb-5" src="./assets/logo/Upstream Champion Landscape Logo Light.png"
+										width="30%" alt="" />
+									<h1 class="heading-header-1 mb-0 text-white">COMING SOON</h1>
+									<div class="inner mb-34">
+										<div class="heading-header-2  lh-base text-white ">UPSTREAM CHAMPION</div>
+									</div>
+									<div class="countdown py-15 mb-34">
+										<div id="clockdiv">
+											<div>
+												<span class="days"></span>
+												<div class="smalltext">Days</div>
+											</div>
+											<div>
+												<span class="hours"></span>
+												<div class="smalltext">Hours</div>
+											</div>
+											<div>
+												<span class="minutes"></span>
+												<div class="smalltext">Minutes</div>
+											</div>
+											<div>
+												<span class="seconds"></span>
+												<div class="smalltext">Seconds</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+
+								<!-- <div class="swiper-slide">
+									<h1 class="heading-header-1">Flexible <span class="text-primary">job</span> with
+										reasonable payment</h1>
+									<div class="heading-text-2">Make your website more attractive and marketable to
+										attract more audiences, freelancers, and employers</div>
+								</div> -->
+							</div>
+							<!-- /.header-slider-content -->
+							<form class="ms-auto py-5 mb-60" action="#">
+								<h5 class="text-white ">GET NOTIFIED WHEN WE ARE OPEN</h5>
+								<div class="form-btn-inner form-newsletter rounded-pill ">
+									<input class="form-control" type="email"
+										placeholder="Enter your email address..." />
+									<button
+										class="btn btn-accent text-white text-uppercase fw-semiBold py-12 px-20 px-lg-34 shadow-none"
+										type="submit">Send</button>
+								</div>
+							</form>
 
 
-		<section class="bg-ghost-white">
+							<!-- /.btn-discover-now and watch-video -->
+
+							<div class="pagination-slider pagination-line header-slider-pagination mt-60"></div>
+							<!-- /.header-slider-pagination -->
+						</div>
+						<!-- /.header-slider -->
+					</div>
+					<!-- /.col -->
+
+					<div class="col-12 col-lg-6 col-xl-7 order-1 order-lg-2">
+						<div class="position-relative h-lg-100">
+							<img src="./assets/img/hero.png" class="hero-image-img" alt="" />
+							<!-- /. hero-image -->
+						</div>
+					</div>
+					<!-- /.col -->
+				</div>
+				<!-- /.row -->
+			</div>
+			<!-- /.container -->
+		</div>
+
+		<!-- <section class="bg-ghost-white">
 			<div class="container">
 				<div class="row ">
 					<div class="col-lg-5 mt-100">
@@ -141,7 +218,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 
 
