--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 										width="30%" alt="" />
 									<h1 class="heading-header-1 mb-0 text-white">COMING SOON</h1>
 									<div class="inner mb-34">
-										<div class="heading-header-2  lh-base text-white ">UPSTREAM CHAMPION</div>
+										<div class="heading-header-2 text-white line">UPSTREAM CHAMPION</div>
 									</div>
-									<div class="countdown py-15 mb-34">
+									<div class="countdown">
 										<div id="clockdiv">
 											<div>
 												<span class="days"></span>
