--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<div class="swiper header-slider">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
-									<img class=" mb-5" src="./assets/logo/Upstream Champion Landscape Logo Light.png"
+									<img class="logoUcL" src="./assets/logo/Upstream Champion Landscape Logo Light.png"
 										width="30%" alt="" />
 									<h1 class="heading-header-1 mb-0 text-white">COMING SOON</h1>
 									<div class="inner mb-34">
@@ -224,7 +224,7 @@
 
 
 
-		<section class="py-60">
+		<section class="py-43">
 			<div class="container">
 				<div class="row">
 					<div class="col-12 col-lg-6 offset-xxl-1 d-flex  mb-34 mb-lg-0  order-lg-1">
@@ -328,7 +328,7 @@
 									</div>
 								</div>
 								<div class="col-lg-6">
-									<img src="./assets/img/image2.png" class="how-it-work-image-img rounded-40"
+									<img src="./assets/img/image3.png" class="how-it-work-image-img rounded-40"
 										alt="" />
 								</div>
 							</div>
@@ -768,7 +768,7 @@
 					<div class="col-lg-10">
 						<div class="d-grid bg-white p-20 p-md-34 p-xxl-43 mt-24 gap-34 rounded-20 shadow-2 bgcontact">
 							<div class="row ">
-								<h2 class="heading-section-4 text-dark mb-0">Contact</h2>
+								<h2 class="heading-section-4 text-dark mb-0">Kontak</h2>
 								<div class="col-lg-5 my-15 my-xl-24">
 									<div class="contactUs">
 										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolorum
@@ -782,7 +782,7 @@
 											<p><img src="./assets/img/icon/phone.svg" class="svg-inject svg-icon"
 													alt="" />&nbsp;(021) 29547000</p>
 										</div>
-										<span>Connect with us :</span>
+										<span>Ikuti Social Media Kami :</span>
 										<ul class="social-btn-group mt-25">
 											<li class="social-item">
 												<a class="social-link" href="#">
@@ -815,33 +815,33 @@
 								<div class="col-lg-7">
 									<form action="#" class="row">
 										<div class="col-md-6 col-xl-6 ">
-											<label for="inputFirstname" class="form-label">First Name</label>
+											<label for="inputFirstname" class="form-label">Nama Lengkap</label>
 											<input type="text" class="form-control rounded-pill" id="inputFirstname"
 												placeholder="First Name" />
 										</div>
 
 										<div class="col-md-6 col-xl-6 ">
-											<label for="inputEmailaddress" class="form-label">Email Address</label>
+											<label for="inputEmailaddress" class="form-label">Email Kantor</label>
 											<input type="email" class="form-control rounded-pill" id="inputEmailaddress"
 												placeholder="Email" />
 										</div>
 										<div class="col-md-12 col-xl-12 my-15 my-xl-24">
-											<label for="inputEmailaddress" class="form-label">Your Subject</label>
+											<label for="inputEmailaddress" class="form-label">Subject</label>
 											<input type="Your Subject" class="form-control rounded-pill"
 												id="inputYourSubject" placeholder="Your Subject" />
 										</div>
 
 										<div class="col-12 my-10 my-xl-10">
-											<p class="heading-text-1 text-primary ">Message</p>
-											<label for="textareaAboutyou" class="form-label">Write here your
-												message</label>
+											<p class="heading-text-1 text-primary ">Pesan</p>
+											<label for="textareaAboutyou" class="form-label">Silahkan tulis pesanmu
+												disini...</label>
 											<textarea class="form-control" id="textareaAboutyou" rows="5"
 												placeholder="Message"></textarea>
 										</div>
 										<div class="col-12 d-flex my-15 my-xl-24">
 											<button type="submit"
 												class="btn btn-primary fw-semiBold py-12 px-24 px-md-60 rounded-pill"
-												role="button">Send Message</button>
+												role="button">Kirim</button>
 										</div>
 									</form>
 								</div>
