--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<main class="main">
 
 		<div class="bg-ghost-white">
-			<div class="container-xxl">
+			<div class="container">
 				<div class="row">
 					<div
 						class="col-12 col-lg-6 col-xl-5 d-flex align-items-center my-34 my-lg-60 my-xl-120 order-2 order-lg-1">
