--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 									<div class="inner mb-34">
 										<div class="heading-header-2 text-white line">UPSTREAM CHAMPION</div>
 									</div>
+									<div class="position-relative h-lg-100">
+										<img src="./assets/img/hero.png" class="hero-image-img  d-lg-none" alt="" />
+									</div>
 									<div class="countdown">
 										<div id="clockdiv">
 											<div>
@@ -159,8 +162,7 @@
 
 					<div class="col-12 col-lg-6 col-xl-7 order-1 order-lg-2">
 						<div class="position-relative h-lg-100">
-							<img src="./assets/img/hero.png" class="hero-image-img" alt="" />
-							<!-- /. hero-image -->
+							<img src="./assets/img/hero.png" class="hero-image-img d-none d-lg-block " alt="" />
 						</div>
 					</div>
 					<!-- /.col -->
