--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 	<nav class="navbar navbar-expand-xl bg-ghost-white">
-		<div class="container-xxl justify-content-md-start">
+		<div class="container justify-content-md-start">
 			<img class="d-lg-none mb-5" src="./assets/logo/logo PHE-01.svg" alt="" width="150" />
 			<!-- <a class="btn btn-primary fw-semiBold py-12 px-xl-43 ms-xl-12 rounded-pill" href="/applicationform.html"
 				role="button">Login</a>
@@ -172,56 +172,6 @@
 			<!-- /.container -->
 		</div>
 
-		<!-- <section class="bg-ghost-white">
-			<div class="container">
-				<div class="row ">
-					<div class="col-lg-5 mt-100">
-						<img class=" mb-5" src="./assets/logo/Upstream Champion Landscape Logo Light.png" width="30%"
-							alt="" />
-						<div class="heading-header-2 lh-base text-white">COMING SOON</div>
-						<div class="inner mb-34">
-							<div class="heading-header-2  lh-base text-white ">UPSTREAM CHAMPION</div>
-							<span class="text-white">di Lingkungan Subholding Upstream</span>
-						</div>
-
-						<div class="countdown py-15 mb-34">
-							<div id="clockdiv">
-								<div>
-									<span class="days"></span>
-									<div class="smalltext">Days</div>
-								</div>
-								<div>
-									<span class="hours"></span>
-									<div class="smalltext">Hours</div>
-								</div>
-								<div>
-									<span class="minutes"></span>
-									<div class="smalltext">Minutes</div>
-								</div>
-								<div>
-									<span class="seconds"></span>
-									<div class="smalltext">Seconds</div>
-								</div>
-							</div>
-						</div>
-						<img class="d-lg-none" src="./assets/img/imgCountdown.png" width="100%" alt="" />
-						<form class="ms-auto py-5 mb-60" action="#">
-							<h5 class="text-white ">GET NOTIFIED WHEN WE ARE OPEN</h5>
-							<div class="form-btn-inner form-newsletter rounded-pill ">
-								<input class="form-control" type="email" placeholder="Enter your email address..." />
-								<button
-									class="btn btn-accent text-white text-uppercase fw-semiBold py-12 px-20 px-lg-34 shadow-none"
-									type="submit">Send</button>
-							</div>
-						</form>
-					</div>
-					<div class="col-lg-7">
-						<img class="d-none d-lg-block" src="./assets/img/imgCountdown.png" width="100%" alt="" />
-					</div>
-				</div>
-			</div>
-		</section> -->
-
 
 
 
@@ -229,7 +179,7 @@
 		<section class="py-43">
 			<div class="container">
 				<div class="row">
-					<div class="col-12 col-lg-6 offset-xxl-1 d-flex  mb-34 mb-lg-0  order-lg-1">
+					<div class="col-lg-6">
 						<div class="position-relative">
 							<img src="./assets/img/image.png" class="how-it-work-image-img rounded-40" alt="" />
 							<img src="./assets/pages/index/how-it-work/figure-1.svg"
@@ -241,7 +191,7 @@
 						</div>
 					</div>
 					<!-- /.col -->
-					<div class="col-12 col-lg-6 col-xxl-5 order-2  order-lg-2 order-1">
+					<div class="col-lg-6 ">
 						<div class="d-grid gap-12 w-md-75 w-lg-100">
 							<div class="heading-text-1 text-primary">Tentang Upstream Champion</div>
 							<h2 class="heading-section-2 text-dark mb-0">Mengapa harus mengikuti program Upstream
@@ -316,7 +266,7 @@
 		<section class="py-60">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-lg-10 col">
+					<div class="col-lg-12 col">
 						<div class="cardDetailUc">
 							<div class="row">
 								<div class="col-lg-6">
@@ -348,7 +298,7 @@
 					<h2 class="heading-section-3 text-dark text-center mb-0">Tahapan & Linimasa Program</h2>
 				</div>
 				<div class="row justify-content-center ">
-					<div class="col-lg-10">
+					<div class="col-lg-12">
 						<div class="backWhite">
 							<div class="ps-timeline-sec">
 								<div class="containerSide">
@@ -561,7 +511,7 @@
 		<section class="cardUser ">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-lg-10 col">
+					<div class="col-lg-12 col">
 						<div class="py-60">
 							<div class="counter">
 								<p class="text-center text-white heading-section-4 mb-10">Kriteria Penilaian terhadap
@@ -625,7 +575,6 @@
 				</div>
 			</div>
 		</section>
-
 
 		<section class="bgFooterTabs pt-10 pb-180">
 			<h2 class="heading-section-3 text-dark text-center mt-60">Frequently asked questions</h2>
@@ -767,7 +716,7 @@
 		<section class="formNow ">
 			<div class="container">
 				<div class="row justify-content-center mb-100">
-					<div class="col-lg-10">
+					<div class="col-lg-12">
 						<div class="d-grid bg-white p-20 p-md-34 p-xxl-43 mt-24 gap-34 rounded-20 shadow-2 bgcontact">
 							<div class="row ">
 								<h2 class="heading-section-4 text-dark mb-0">Kontak</h2>
