--- a/index.html
+++ b/index.html
@@ -213,12 +213,15 @@
 										</div>
 										<div class="accordion-content">
 											<h2 class="accordion-header" id="headingOne">Program Upstream Champion</h2>
-											<div id="collapseOne" class="accordion-collapse collapse "
+											<div id="collapseOne" class="accordion-collapse collapse show "
 												aria-labelledby="headingOne" data-bs-parent="#accordion-how-it-works">
-												<div class="accordion-body">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-													dolore
-													magna aliqua</div>
+												<div class="accordion-body">Upstream Champion merupakan wadah untuk
+													memfasilitasi Perwira yang memiliki motivasi kuat dalam
+													mengeksplorasi potensi diri untuk menjadi duta Perusahaan dalam
+													mengampanyekan pesan-pesan korporasi (seperti tata nilai Perusahaan,
+													success stories, dan best practices) di lingkungan Subholding
+													Upstream.
+												</div>
 											</div>
 										</div>
 									</div>
@@ -237,12 +240,31 @@
 										</div>
 										<div class="accordion-content">
 											<h2 class="accordion-header" id="headingTwo">Benefit Program</h2>
-											<div id="collapseTwo" class="accordion-collapse collapse show"
+											<div id="collapseTwo" class="accordion-collapse collapse "
 												aria-labelledby="headingTwo" data-bs-parent="#accordion-how-it-works">
-												<div class="accordion-body">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-													dolore
-													magna aliqua.</div>
+												<div class="accordion-body">
+													<p>
+														1. Jejaring yang luas. Kesempatan berjejaring dengan para
+														Upstream
+														Champion lainnya dan seluruh Perwira Subholding Upstream.
+														2. Keterlibatan di berbagai event korporasi. Kesempatan terlibat
+														dan
+														berkontribusi langsung di berbagai event korporasi di lingkungan
+														internal Subholding Upstream.<br>
+														3. Top Up Learning Hours. Kesempatan menambah poin learning
+														hours
+														sesuai dengan Individual Development Plan (IDP) para
+														Perwira.<br>
+														4. Kesempatan belajar. Akses terhadap berbagai program bootcamp
+														seputar personal branding, komunikasi kreatif, dan lain
+														sebagainya.<br>
+														5. Kesempatan mendapatkan hadiah menarik. Upstream Champion
+														berhak
+														mendapatkan berbagai hadiah menarik sesuai dengan besaran poin
+														yang
+														mereka kumpulkan selama masa bertugas
+													</p>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -588,92 +610,74 @@
 
 							<div class="tabsFaq">
 								<div class="question">
-									Jawaban atas pertanyaan umum yang sering diajukan tentang program?
+									Apa yang dimaksud dengan Program Upstream Champion?
 								</div>
 								<div class="answercont">
 									<div class="answer">
-										<span>Lorem Ipsum is simply dummy text of the printing and typesetting
-											industry.
-											Lorem Ipsum
-											has been the industry's standard dummy text ever since the 1500s, when
-											an
-											unknown
-											printer took a galley of type and scrambled it to make a type specimen
-											book.
-											It
-											has
-											survived not only five centuries, but also the leap into electronic
-											typesetting,
-											remaining essentially unchanged. </span>
+										<span>Program Upstream Champion merupakan sebuah wadah untuk memfasilitasi
+											Perwira yang memiliki motivasi yang kuat dalam memberikan dampak positif
+											bagi sesama Perwira di wilayah kerja masing-masing melalui penyampaian
+											pesan, nilai-nilai, dan cerita baik Perusahaan. Peserta Upstream Champion
+											menjalankan perannya sebagai ‘messenger’ dan ‘agent of change’ dengan
+											dibekali pengetahuan dan keterampilan melalui serangkaian program
+											pengembangan kapasitas.</span>
 									</div>
 								</div>
 							</div>
 
 							<div class="tabsFaq">
 								<div class="question">
-									My Pen loads infinitely or crashes the browser.
+									Apa perbedaan antara program Upstream Champion dengan Agent of Change?
 								</div>
 								<div class="answercont">
 									<div class="answer">
-										<span>Lorem Ipsum is simply dummy text of the printing and typesetting
-											industry.
-											Lorem Ipsum
-											has been the industry's standard dummy text ever since the 1500s, when
-											an
-											unknown
-											printer took a galley of type and scrambled it to make a type specimen
-											book.
-											It
-											has
-											survived not only five centuries, but also the leap into electronic
-											typesetting,
-											remaining essentially unchanged. </span>
+										<span>Upstream Champion adalah program baru yang diinisiasi oleh Subholding
+											Upstream yang merupakan sebuah wadah untuk memfasilitasi Perwira yang
+											memiliki motivasi yang kuat dalam memberikan dampak positif bagi sesama
+											Perwira di wilayah kerja masing-masing melalui penyampaian pesan,
+											nilai-nilai, dan cerita baik Perusahaan.
+											Sementara, Agent of Change adalah program yang diinisiasi oleh Holding bagi
+											seluruh anak usaha yang merupakan wadah bagi Perwira milenial yang didorong
+											untuk menjadi agen dan pengawal perubahan ke arah yang lebih baik. AOC
+											menjadi ujung tombak proses internalisasi tata nilai perusahaan, AKHLAK
+											(Amanah, Kompeten, Harmonis, Loyal, Adaptif, Kolaboratif) secara masif dan
+											inovatif. Dalam hal ini, AOC lebih berhubungan untuk internalisasi
+											nilai-nilai Perusahaan (top down).
+											 </span>
 									</div>
 								</div>
 							</div>
 
 							<div class="tabsFaq">
 								<div class="question">
-									How do I contact the creator of a Pen?
+									Apakah program Upstream Champion memiliki kaitan dengan program Pertamina Employee
+									Journalism (PEJ) yang diinisiasi Pertamina Holding?
 								</div>
 								<div class="answercont">
 									<div class="answer">
-										<span>Lorem Ipsum is simply dummy text of the printing and typesetting
-											industry.
-											Lorem Ipsum
-											has been the industry's standard dummy text ever since the 1500s, when
-											an
-											unknown
-											printer took a galley of type and scrambled it to make a type specimen
-											book.
-											It
-											has
-											survived not only five centuries, but also the leap into electronic
-											typesetting,
-											remaining essentially unchanged. </span>
+										<span>Program Upstream Champion merupakan sebuah wadah untuk memfasilitasi
+											Perwira yang memiliki motivasi yang kuat dalam memberikan dampak positif
+											bagi sesama Perwira di wilayah kerja masing-masing melalui penyampaian
+											pesan, nilai-nilai, dan cerita baik Perusahaan. Peserta Upstream Champion
+											menjalankan perannya sebagai ‘messenger’ dan ‘agent of change’ dengan
+											dibekali pengetahuan dan keterampilan melalui serangkaian program
+											pengembangan kapasitas.</span>
 									</div>
 								</div>
 							</div>
 
 							<div class="tabsFaq">
 								<div class="question">
-									What version of [library] does CodePen use?
+									Siapa sajakah yang berhak mendaftar program Upstream Champion?
 								</div>
 								<div class="answercont">
 									<div class="answer">
-										<span>Lorem Ipsum is simply dummy text of the printing and typesetting
-											industry.
-											Lorem Ipsum
-											has been the industry's standard dummy text ever since the 1500s, when
-											an
-											unknown
-											printer took a galley of type and scrambled it to make a type specimen
-											book.
-											It
-											has
-											survived not only five centuries, but also the leap into electronic
-											typesetting,
-											remaining essentially unchanged. </span>
+										<span>Berikut ini adalah beberapa hal yang dapat menjadi perhatian bagi peserta
+											yang ingin mendaftar program Upstream Champion:
+											✨Karyawan Pekerja Waktu Tidak Tertentu (PWTT) dan Pekerja Waktu Tertentu
+											(PWT) Subholding Upstream dengan masa kerja minimal 3 (tiga) tahun.
+											✨Berdomisili di Indonesia.
+											✨Bukan berasal dari jajaran manajerial Subholding Upstream.</span>
 
 									</div>
 								</div>
@@ -681,24 +685,21 @@
 
 							<div class="tabsFaq">
 								<div class="question">
-									What are forks?
+									Apakah Perwira dari Regional 5 (internasional) berhak untuk mengikuti program
+									Upstream Champion?
 								</div>
 								<div class="answercont">
 									<div class="answer">
-										A fork is a complete copy of a Pen or Project that you can save to your own
-										account
-										and
-										modify. Your forked copy comes with everything the original author wrote,
-										including
-										all of
-										the code and any dependencies.<br><br>
-
-										<a href="https://blog.codepen.io/documentation/features/forks/">Learn More
-											About
-											Forks</a>
+										<span>
+											Untuk batch 1 ini, program Upstream Champion dirancang untuk para Perwira
+											yang berdomisili di Indonesia. Namun, hal tersebut tidak menutup kemungkinan
+											bahwa pada batch selanjutnya, program Upstream Champion akan terbuka untuk
+											seluruh Perwira, termasuk Perwira Regional 5 (domisili internasional).
+										</span>
 									</div>
 								</div>
 							</div>
+
 						</div>
 
 						<figure>
@@ -726,7 +727,7 @@
 											adipisci
 											recusandae
 											praesentium dicta!</p>
-										<div class="addres mt-100 mb-60">
+										<div class="addres mt-60 mb-60">
 											<p><img src="./assets/img/icon/location.svg" class="svg-inject svg-icon "
 													alt="" />&nbsp;Jl. TB Simatupang Kav. 99 Jakarta
 												Selatan 12520</p>
