--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 			<div class="container">
 				<div class="row  py-34">
 					<div class="heading-text-1 text-primary text-center">Timeline</div>
-					<h2 class="heading-section-3 text-dark text-center mb-0">Tahapan & Linimasa Program</h2>
+					<h2 class="heading-section-3 text-dark text-center mb-0">Tahapan Program</h2>
 				</div>
 				<div class="row justify-content-center ">
 					<div class="col-lg-12">
@@ -328,30 +328,45 @@
 										<li>
 											<div class="ps-top">
 												<p>
-												<h4>Persiapan</h4>(1-30 April 2024)</p>
-												<h4>Pendaftaran dan pengumpulan karya</h4>(13 Mei-12 Juni 2024)</p>
+												<h4>Pendaftaran :
+												</h4>(15 Mei-12 Juni 2024)</p>
 											</div>
 											<div class="ps-bot">
-												<h5>Fase I</h5>
+												<h5>Tahapan 1</h5>
 											</div>
 											<span class="ps-sp-top">01</span>
 										</li>
 										<li>
 											<div class="ps-bot">
 												<p>
-												<h4>Proses Seleksi Karya</h4>(13 - 14 Juni 2024)</p>
-												<h4>Proses Seleksi (Mini Interview)
-												</h4>(19 - 21 Juni 2024)</p>
+												<h4>
+												</h4>Proses seleksi karya<br>Proses seleksi interview<br>Pengumuman
+												Upstream Champion terpilih</p>
 											</div>
 											<div class="ps-top">
-												<h5>Fase II</h5>
+												<h5>Tahapan 2</h5>
 											</div>
 											<span class="ps-sp-bot">02</span>
 										</li>
 										<li>
 											<div class="ps-top">
-												<p>
-												<h4>Bootcamp</h4>(24 - 28 Juni)</p>
+
+												<h4>Bootcamp yang terdiri dari:
+												</h4>
+												<h6 class="miniText text-start">
+													<p class="boldList text-start">Individual
+														learning</p> (Upstream Champion
+													akan mengikuti
+													kelas-kelas
+													melalui platform online yang akan disediakan)
+												</h6>
+												<h6 class="miniText text-start">
+													<p class="boldList text-start">Hybrid
+														workshop</p>(Upstream Champion akan
+													mengikuti
+													sesi hybrid workshop
+													secara bersamaan)
+												</h6>
 											</div>
 											<div class="ps-bot">
 												<h5>Fase III</h5>
@@ -361,7 +376,8 @@
 										<li>
 											<div class="ps-bot">
 												<p>
-												<h4>Penobatan Upstream Champion Batch 1</h4>29 Juni 2024</p>
+												<h4>Penobatan Upstream Champion</h4>
+												</p>
 											</div>
 											<div class="ps-top">
 												<h5>Fase IV</h5>
@@ -371,8 +387,7 @@
 										<li>
 											<div class="ps-top">
 												<p>
-												<h4>Masa bertugas Upstream Champion Batch 1</h4>(1 Juli 2024 – 30 Juni
-												2025)
+												<h4>Masa bertugas Upstream Champion</h4>
 												</p>
 											</div>
 											<div class="ps-bot">
@@ -785,10 +800,9 @@
 
 										<div class="col-12 my-10 my-xl-10">
 											<p class="heading-text-1 text-primary ">Pesan</p>
-											<label for="textareaAboutyou" class="form-label">Silahkan tulis pesanmu
-												disini...</label>
+
 											<textarea class="form-control" id="textareaAboutyou" rows="5"
-												placeholder="Message"></textarea>
+												placeholder="Silahkan tulis pesanmu disini..."></textarea>
 										</div>
 										<div class="col-12 d-flex my-15 my-xl-24">
 											<button type="submit"
