--- a/index.html
+++ b/index.html
@@ -22,16 +22,11 @@
 	<nav class="navbar navbar-expand-xl bg-ghost-white">
 		<div class="container justify-content-md-start">
 			<img class="d-lg-none mb-5" src="./assets/logo/logo PHE-01.svg" alt="" width="150" />
-			<!-- <a class="btn btn-primary fw-semiBold py-12 px-xl-43 ms-xl-12 rounded-pill" href="/applicationform.html"
-				role="button">Login</a>
-			<a class="navbar-brand" href="#"> -->
-			<!-- /.navbar-brand -->
 
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
 				aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
 				<img src="./assets/icons/bars.svg" class="svg-inject svg-icon" alt="" />
 			</button>
-			<!-- /.navbar-toggler-mobile -->
 
 			<div class="d-none d-md-flex d-xl-none ms-auto">
 				<a class="btn btn-alice-blue text-dark fw-semiBold py-12 px-34 me-12 rounded-pill"
@@ -39,7 +34,6 @@
 				<a class="btn btn-primary fw-semiBold py-12 px-43 rounded-pill" href="/applicationform.html"
 					role="button">Sign Up</a>
 			</div>
-			<!-- /.btn-login and btn-signup mobile -->
 
 			<div class="collapse navbar-collapse" id="navbarContent">
 				<div class="d-grid d-xl-flex align-items-xl-center pb-15 pb-xl-0 w-90 gap-20 gap-xl-0">
@@ -48,22 +42,22 @@
 							<a class="nav-link text-white active" aria-current="page" href="/">Beranda</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="/#pricing-section">Tentang</a>
+							<a class="nav-link text-white" href="#">Tentang</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="/eventlist.html">Persyaratan</a>
+							<a class="nav-link text-white" href="#">Persyaratan</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="/joblist.html">Alur Seleksi</a>
+							<a class="nav-link text-white" href="#">Alur Seleksi</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="/joblist.html">Timeline</a>
+							<a class="nav-link text-white" href="#">Timeline</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="/joblist.html">Faq</a>
+							<a class="nav-link text-white" href="#">Faq</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="/joblist.html">Kontak</a>
+							<a class="nav-link text-white" href="#">Kontak</a>
 						</li>
 					</ul>
 					<!-- /.navbar-nav -->
@@ -128,58 +122,45 @@
 											</div>
 										</div>
 									</div>
-
 								</div>
-
-								<!-- <div class="swiper-slide">
-									<h1 class="heading-header-1">Flexible <span class="text-primary">job</span> with
-										reasonable payment</h1>
-									<div class="heading-text-2">Make your website more attractive and marketable to
-										attract more audiences, freelancers, and employers</div>
-								</div> -->
+								<form class="ms-auto py-5 mb-60" action="#">
+									<h5 class="text-white ">GET NOTIFIED WHEN WE ARE OPEN</h5>
+									<div class="form-btn-inner form-newsletter rounded-pill ">
+										<input class="form-control" type="email"
+											placeholder="Enter your email address..." />
+										<button
+											class="btn btn-accent text-white text-uppercase fw-semiBold py-12 px-20 px-lg-34 shadow-none"
+											type="submit">Send</button>
+									</div>
+								</form>
 							</div>
-							<!-- /.header-slider-content -->
-							<form class="ms-auto py-5 mb-60" action="#">
+
+							<form class="ms-auto py-5 ">
 								<h5 class="text-white ">GET NOTIFIED WHEN WE ARE OPEN</h5>
 								<div class="form-btn-inner form-newsletter rounded-pill ">
-									<input class="form-control" type="email"
-										placeholder="Enter your email address..." />
+									<input class="form-control" type="email" placeholder="Enter your email address...">
 									<button
 										class="btn btn-accent text-white text-uppercase fw-semiBold py-12 px-20 px-lg-34 shadow-none"
 										type="submit">Send</button>
 								</div>
 							</form>
-
-
-							<!-- /.btn-discover-now and watch-video -->
-
-							<div class="pagination-slider pagination-line header-slider-pagination mt-60"></div>
-							<!-- /.header-slider-pagination -->
 						</div>
-						<!-- /.header-slider -->
 					</div>
-					<!-- /.col -->
 
 					<div class="col-12 col-lg-6 col-xl-7 order-1 order-lg-2">
 						<div class="position-relative h-lg-100">
 							<img src="./assets/img/hero.png" class="hero-image-img d-none d-lg-block " alt="" />
 						</div>
 					</div>
-					<!-- /.col -->
+
 				</div>
-				<!-- /.row -->
 			</div>
-			<!-- /.container -->
 		</div>
 
-
-
-
-
-		<section class="py-43">
+		<section class="py-43" id="tentang">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6">
+					<div class="col-lg-6 ">
 						<div class="position-relative">
 							<img src="./assets/img/image.png" class="how-it-work-image-img rounded-40" alt="" />
 							<img src="./assets/pages/index/how-it-work/figure-1.svg"
@@ -194,7 +175,7 @@
 					<div class="col-lg-6 ">
 						<div class="d-grid gap-12 w-md-75 w-lg-100">
 							<div class="heading-text-1 text-primary">Tentang Upstream Champion</div>
-							<h2 class="heading-section-2 text-dark mb-0">Mengapa harus mengikuti program Upstream
+							<h2 class="heading-section-2 text-dark mb-0">Alasan Kamu Harus Mengikuti Program Upstream
 								Champion
 							</h2>
 							<div class="d-flex">
@@ -217,8 +198,8 @@
 												aria-labelledby="headingOne" data-bs-parent="#accordion-how-it-works">
 												<div class="accordion-body">Upstream Champion merupakan wadah untuk
 													memfasilitasi Perwira yang memiliki motivasi kuat dalam
-													mengeksplorasi potensi diri untuk menjadi duta Perusahaan dalam
-													mengampanyekan pesan-pesan korporasi (seperti tata nilai Perusahaan,
+													mengeksplorasi potensi diri untuk menjadi Duta Perusahaan dalam
+													mengampanyekan pesan-pesan korporasi (seperti Tata Nilai Perusahaan,
 													success stories, dan best practices) di lingkungan Subholding
 													Upstream.
 												</div>
@@ -239,7 +220,7 @@
 										<div class="accordion-number bg-persian-blue bg-opacity-10 text-persian-blue">2
 										</div>
 										<div class="accordion-content">
-											<h2 class="accordion-header" id="headingTwo">Benefit Program</h2>
+											<h2 class="accordion-header" id="headingTwo">Benefit Untuk Kamu </h2>
 											<div id="collapseTwo" class="accordion-collapse collapse "
 												aria-labelledby="headingTwo" data-bs-parent="#accordion-how-it-works">
 												<div class="accordion-body">
@@ -311,7 +292,6 @@
 				</div>
 			</div>
 		</section>
-
 
 		<section class="bgTimeline py-80">
 			<div class="container">
@@ -615,8 +595,7 @@
 
 		<section class="bgFooterTabs pt-10 pb-180">
 			<h2 class="heading-section-3 text-dark text-center mt-60">Frequently asked questions</h2>
-			<p class="text-center p-20">All the Lorem Ipsum generators on the Internet tend to repeat predefined
-				chunks as necessary,
+			<p class="text-center p-20">Temukan jawaban atas pertanyaan-pertanyaan yang sering diajukan di sini.
 			</p>
 			<div class="elips">
 				<div class="row justify-content-center">
@@ -738,10 +717,8 @@
 								<h2 class="heading-section-4 text-dark mb-0">Kontak</h2>
 								<div class="col-lg-5 my-15 my-xl-24">
 									<div class="contactUs">
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolorum
-											adipisci
-											recusandae
-											praesentium dicta!</p>
+										<p>Butuh bantuan lebih lanjut?
+											Hubungi kami!</p>
 										<div class="addres mt-60 mb-60">
 											<p><img src="./assets/img/icon/location.svg" class="svg-inject svg-icon "
 													alt="" />&nbsp;Jl. TB Simatupang Kav. 99 Jakarta
