--- a/index.html
+++ b/index.html
@@ -274,12 +274,25 @@
 							<div class="row">
 								<div class="col-lg-6">
 									<div class="DetailUc">
-										<span class="text-white">Syarat & Ketentuan</span>
+										<span class="text-white">Terms & Conditions</span>
 										<h2 class="heading-section-1 text-white mb-0">Cek Kriteria Seorang
 											Upstream Champion
 										</h2>
-										<a class="btn btn-accent text-white fw-semiBold py-12 px-43 mt-25 rounded-pill"
-											href="#" role="button">Lihat Selengkapnya</a>
+										<div class="row">
+											<div class="col-lg-6"></div>
+										</div>
+										<!-- <a class="btn btn-accent text-white fw-semiBold py-12 px-43 mt-25 rounded-pill"
+											href="#" role="button">Selengkapnya</a> -->
+
+										<div class="d-grid d-md-none d-xl-flex gap-15 gap-xl-0 order-3 mt-43">
+											<a class="btn btn-orange  fw-semiBold py-12 px-xl-34 ms-xl-12 rounded-pill"
+												href="#" role="button">Lihat Selengkapnya</a>
+											<a class="btn btn-danger fw-semiBold py-12 px-xl-43 ms-xl-12 rounded-pill"
+												href="#" role="button"><img src="./assets/img/icon/unduh.svg"> &nbsp;
+												Syarat &
+												Ketentuan</a>
+										</div>
+
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -384,7 +397,7 @@
 			</div>
 		</section>
 
-		<section class="mb-180">
+		<!-- <section class="mb-180">
 			<div class="container">
 				<div class="row py-100 justify-content-center">
 					<div class="col-lg-9">
@@ -416,9 +429,9 @@
 											<h5 class="card-title">Diterima</h5>
 											<p class="card-text">Karya diterima oleh tim<br>internal communications</p>
 										</div>
-										<!-- /.card-icon-component -->
+
 									</div>
-									<!-- /.col -->
+
 
 									<div class="col-12 col-md-6 col-lg-4 my-12">
 										<div class="card card-icon">
@@ -435,9 +448,9 @@
 											<h5 class="card-title">Seleksi</h5>
 											<p class="card-text">Seleksi karya oleh tim<br> internal communications</p>
 										</div>
-										<!-- /.card-icon-component -->
+
 									</div>
-									<!-- /.col -->
+
 
 									<div class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-0 my-12">
 										<div class="card card-icon">
@@ -454,9 +467,9 @@
 											<h5 class="card-title">Pengumuman</h5>
 											<p class="card-text">Pengumuman peserta <br>lolos tahap I</p>
 										</div>
-										<!-- /.card-icon-component -->
+
 									</div>
-									<!-- /.col -->
+
 								</div>
 							</div>
 							<div id="tab2" class="tab-slider--body">
@@ -476,9 +489,9 @@
 											<h5 class="card-title">Trusted</h5>
 											<p class="card-text">Karya diterima oleh tim internal communications</p>
 										</div>
-										<!-- /.card-icon-component -->
+
 									</div>
-									<!-- /.col -->
+
 
 									<div class="col-12 col-md-6 col-lg-4 my-12">
 										<div class="card card-icon">
@@ -495,9 +508,9 @@
 											<h5 class="card-title">Trusted</h5>
 											<p class="card-text">Karya diterima oleh tim internal communications</p>
 										</div>
-										<!-- /.card-icon-component -->
+
 									</div>
-									<!-- /.col -->
+
 
 									<div class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-0 my-12">
 										<div class="card card-icon">
@@ -514,16 +527,16 @@
 											<h5 class="card-title">Trusted</h5>
 											<p class="card-text">Karya diterima oleh tim internal communications</p>
 										</div>
-										<!-- /.card-icon-component -->
+
 									</div>
-									<!-- /.col -->
+
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<section class="cardUser ">
 			<div class="container">
