--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 		<section class="bgTimeline py-80">
 			<div class="container">
-				<div class="row  py-34">
+				<div class="row py-34 mb-43">
 					<div class="heading-text-1 text-primary text-center">Timeline</div>
 					<h2 class="heading-section-3 text-dark text-center mb-0">Tahapan Program</h2>
 				</div>
@@ -320,9 +320,11 @@
 									<ol class="ps-timeline">
 										<li>
 											<div class="ps-top">
-												<p>
-												<h4>Pendaftaran :
-												</h4>(15 Mei-12 Juni 2024)</p>
+												<div class="cardTimeline">
+													<p>
+													<h4 class="text-white">Pendaftaran :
+													</h4>(15 Mei-12 Juni 2024)</p>
+												</div>
 											</div>
 											<div class="ps-bot">
 												<h5>Tahapan 1</h5>
@@ -331,10 +333,12 @@
 										</li>
 										<li>
 											<div class="ps-bot">
-												<p>
-												<h4>
-												</h4>Proses seleksi karya<br>Proses seleksi interview<br>Pengumuman
-												Upstream Champion terpilih</p>
+												<div class="cardTimeline">
+													<p>
+													<h4>
+													</h4>Proses seleksi karya<br>Proses seleksi interview<br>Pengumuman
+													Upstream Champion terpilih</p>
+												</div>
 											</div>
 											<div class="ps-top">
 												<h5>Tahapan 2</h5>
@@ -343,23 +347,25 @@
 										</li>
 										<li>
 											<div class="ps-top">
+												<div class="cardTimeline">
+													<h4 class="text-white">Bootcamp yang terdiri dari:
+													</h4>
+													<h6 class="miniText text-start">
+														<p class="boldList text-start">Individual
+															learning</p> (Upstream Champion
+														akan mengikuti
+														kelas-kelas
+														melalui platform online yang akan disediakan)
+													</h6>
+													<h6 class="miniText text-start">
+														<p class="boldList text-start">Hybrid
+															workshop</p>(Upstream Champion akan
+														mengikuti
+														sesi hybrid workshop
+														secara bersamaan)
+													</h6>
+												</div>
 
-												<h4>Bootcamp yang terdiri dari:
-												</h4>
-												<h6 class="miniText text-start">
-													<p class="boldList text-start">Individual
-														learning</p> (Upstream Champion
-													akan mengikuti
-													kelas-kelas
-													melalui platform online yang akan disediakan)
-												</h6>
-												<h6 class="miniText text-start">
-													<p class="boldList text-start">Hybrid
-														workshop</p>(Upstream Champion akan
-													mengikuti
-													sesi hybrid workshop
-													secara bersamaan)
-												</h6>
 											</div>
 											<div class="ps-bot">
 												<h5>Fase III</h5>
@@ -368,9 +374,11 @@
 										</li>
 										<li>
 											<div class="ps-bot">
-												<p>
-												<h4>Penobatan Upstream Champion</h4>
-												</p>
+												<div class="cardTimeline">
+													<p>
+													<h4 class="text-white">Penobatan Upstream Champion</h4>
+													</p>
+												</div>
 											</div>
 											<div class="ps-top">
 												<h5>Fase IV</h5>
@@ -379,9 +387,11 @@
 										</li>
 										<li>
 											<div class="ps-top">
-												<p>
-												<h4>Masa bertugas Upstream Champion</h4>
-												</p>
+												<div class="cardTimeline">
+													<p>
+													<h4 class="text-white">Masa bertugas Upstream Champion</h4>
+													</p>
+												</div>
 											</div>
 											<div class="ps-bot">
 												<h5>Fase V</h5>
