--- a/daftar.html
+++ b/daftar.html
@@ -294,6 +294,16 @@
         left: 0;
         right: 0;
       }
+
+      .form-step.form-step-active img {
+        margin: auto;
+        left: 0;
+        right: 0;
+        display: block;
+        padding: 10px;
+        background: rgba(13, 110, 253, 0.25);
+        border-radius: 100%;
+      }
     </style>
   </head>
 
@@ -492,7 +502,13 @@
             </div>
 
             <div class="form-step">
-              <h4 class="text-center">Thank You for Registrasi!</h4>
+              <img
+                class="mt-43"
+                src="./assets/img/checklist.png"
+                alt="check"
+                width="100"
+              />
+              <h4 class="text-center mt-43">Thank You for Registrasi!</h4>
               <p class="text-center">
                 You have successfully completed the registration.
               </p>
