--- a/daftar.html
+++ b/daftar.html
@@ -304,6 +304,12 @@
         background: rgba(13, 110, 253, 0.25);
         border-radius: 100%;
       }
+
+      @media (max-width: 320px) {
+        .people-circle {
+          display: none;
+        }
+      }
     </style>
   </head>
 
